2014-06-16  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (obj_print): Render character DC00 as "pnul".
	Clean up code which chooses rendering for characters.
	Print C0 and C1 control characters, as well as D800-DFFF,
	FFFE and FFFF and characters above FFFF using hex;
	others are printed using the #\<char> notation.

	* parser.y (char_from_name): map "pnul" to DC00.

	* txr.1: Documented pnul, clarified character
	printing rules, and added a cautionary note about
	possible ambiguity in printing.

2014-06-16  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register pos_max, pos_min, find_max,
	find_min and seqp as intrinsics.

	* lib.c (gt_f, lt_f): New variables.
	(to_seq): renamed to toseq.
	(seqp): New function.
	(minmax): New static function.
	(replace_str, replace_vec): Follow to_seq renaming.
	(find_max, find_min, pos_max, pos_min): New functions.
	(obj_init): gc-protect and initialize gt_f and lt_f.


	* lib.h (gt_f, lt_f): Declared.
	(to_seq): Declaration updated to toseq.
	(seqp, find_max, find_min, pos_max, pos_min): Declared.

	* txr.1: Updated.

2014-06-15  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): where and sel registered as intrinsics
	where and select.

	* lib.c (generic_funcall): Support a sequence as an argument
	to a sequence.
	(where, sel): New functions.

	* lib.h (where, sel): Declared.

	* txr.1: Documented.

2014-06-15  Kaz Kylheku  <kaz@kylheku.com>

	Bugfix: range and range* broken when "to" argument is
	omitted. This was broken in version 89, by the
	2014-04-08 commit.

	* eval.c (rangev_func, range_star_v_func): Only perform
	numeric tests between from and to if to is not nil.

2014-06-12  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile: Install share/txr/stdlib/*.txr material.

	* match.c (do_txeval): If a variable is not in the bindings, fall
	back on treating it as a TXR Lisp dynamic variable. This allows
	us to refer to the stdlib variable from a quasistring in a
	@(load ...) directive.
