@@ -441,6 +441,7 @@ val lazy_appendv(val lists);
 val ldiff(val list1, val list2);
 val flatten(val list);
 val lazy_flatten(val list);
+val tuples(val n, val seq, val fill);
 val memq(val obj, val list);
 val memql(val obj, val list);
 val memqual(val obj, val list);
