@@ -1,3 +1,14 @@
+2014-06-17  Kaz Kylheku  <kaz@kylheku.com>
+
+	* eval.c (eval_init): register tuples as intrinsic.
+
+	* lib.c (tuples_func): New static function.
+	(tuples): New function.
+
+	* lib.h (tuples): Declared.
+
+	* txr.1: Documented.
+
 2014-06-16  Kaz Kylheku  <kaz@kylheku.com>
 
 	* lib.c (obj_print): Render character DC00 as "pnul".
